--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,8 @@ lib_deps =
     blynkkk/Blynk @ ^0.6.1
     tzapu/WifiManager @ ^0.15.0
     bblanchon/ArduinoJson @ ^6.17.0
+    adafruit/DHT sensor library @ ^1.4.0
+    adafruit/Adafruit Unified Sensor @ ^1.1.4
     
     
 
